@@ -1,8 +1,8 @@
 package com.cecgil.fidelize.admin;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -11,9 +11,7 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 
 import com.cecgil.fidelize.cliente.ClienteRepository;
-import com.cecgil.fidelize.empresa.Empresa;
 import com.cecgil.fidelize.empresa.EmpresaRepository;
-import com.cecgil.fidelize.fidelidade.resgate.Resgate;
 import com.cecgil.fidelize.fidelidade.resgate.ResgateRepository;
 import com.cecgil.fidelize.fidelidade.resgate.StatusResgate;
 import com.cecgil.fidelize.fidelidade.visita.VisitaRepository;
@@ -40,38 +38,58 @@ public class AdminController {
     @GetMapping("/{empresaId}")
     public String painel(@PathVariable UUID empresaId, Model model) {
 
-        Empresa empresa = empresaRepository.findById(empresaId)
+        var empresa = empresaRepository.findById(empresaId)
                 .orElseThrow(() -> new RuntimeException("Empresa não encontrada"));
 
-        List<AdminViewDTO> dados = clienteRepository.findAll()
-                .stream()
-                .filter(c -> c.getEmpresa().getId().equals(empresaId))
-                .map(cliente -> {
-                    long visitas = visitaRepository.countByCliente(cliente);
+        // resumo
+        long totalClientes = clienteRepository.countByEmpresaId(empresaId);
+        long totalVisitas = visitaRepository.countByClienteEmpresaId(empresaId);
+        long totalResgates = resgateRepository.countByCliente_Empresa_IdAndStatus(empresaId, StatusResgate.UTILIZADO);
 
-                    Resgate resgate = resgateRepository
-                            .findAll()
-                            .stream()
-                            .filter(r ->
-                                    r.getCliente().getId().equals(cliente.getId())
-                                    && r.getStatus() == StatusResgate.PENDENTE
-                            )
-                            .findFirst()
+        PainelAdminResumo resumo = new PainelAdminResumo(totalClientes, totalVisitas, totalResgates);
+
+        // últimos 10 resgates
+        List<UltimoResgateView> ultimosResgates = resgateRepository
+                .findTop10ByCliente_Empresa_IdAndStatusOrderByUtilizadoEmDesc(empresaId, StatusResgate.UTILIZADO)
+                .stream()
+                .map(r -> new UltimoResgateView(
+                        r.getCliente().getNome(),
+                        r.getRecompensa().getNome(),
+                        r.getUtilizadoEm()
+                ))
+                .toList();
+
+        // clientes + ciclo atual + última visita
+        List<ClientePainelView> clientes = clienteRepository.findByEmpresaIdOrderByNomeAsc(empresaId)
+                .stream()
+                .map(c -> {
+
+                    LocalDateTime ultimoResgate = resgateRepository
+                            .findTopByClienteAndStatusOrderByUtilizadoEmDesc(c, StatusResgate.UTILIZADO)
+                            .map(r -> r.getUtilizadoEm())
+                            .orElse(LocalDateTime.MIN);
+
+                    long cicloAtual = visitaRepository.countByClienteAndRegistradaEmAfter(c, ultimoResgate);
+
+                    LocalDateTime ultimaVisitaEm = visitaRepository
+                            .findTopByClienteOrderByRegistradaEmDesc(c)
+                            .map(v -> v.getRegistradaEm())
                             .orElse(null);
 
-                    return new AdminViewDTO(
-                            cliente.getId(),
-                            cliente.getNome(),
-                            cliente.getTelefone(),
-                            visitas,
-                            resgate != null ? resgate.getId() : null,
-                            resgate != null ? resgate.getRecompensa().getNome() : null
+                    return new ClientePainelView(
+                            c.getId(),
+                            c.getNome(),
+                            c.getTelefone(),
+                            cicloAtual,
+                            ultimaVisitaEm
                     );
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         model.addAttribute("empresa", empresa);
-        model.addAttribute("dados", dados);
+        model.addAttribute("resumo", resumo);
+        model.addAttribute("clientes", clientes);
+        model.addAttribute("ultimosResgates", ultimosResgates);
 
         return "admin/painel";
     }
